Applying design to navbar

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
     <header>
         <div class="web-header">
-            <img src="./images/logo.png" alt="logo">
-            <h1>Independent News</h1>
+            <img src="./images/odf4.svg" alt="logo">
+            <h1>Alternative NewS</h1>
             <div class="social-icons">
                 <i class="fab fa-facebook-f"></i>
                 <i class="fab fa-twitter"></i>
