--- a/index.html
+++ b/index.html
@@ -21,8 +21,59 @@
                 <i class="fab fa-instagram"></i>
                 <i class="fas fa-rss"></i>
 
-            </div>
+            </div>          
+
+            
         </div>
+
+         <nav class="navbar navbar-expand-md">
+
+
+                <!-- Toggler/collapsibe Button -->
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <!-- Navbar links -->
+                <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                    <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Politics</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">World</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Business</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Travel</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Technology</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Sport</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Cars</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Videos</a>
+                    </li>
+
+                    </ul>
+                </div>
+            </nav> 
     </header>
     
 
