Working on breaking news section

--- a/index.html
+++ b/index.html
@@ -74,6 +74,26 @@
                     </ul>
                 </div>
             </nav> 
+            <div class="breaking-news-section">
+                <span id="btext">Breaking News</span>
+                <marquee behavior="scroll" scrollamount="10" direction="left">
+
+                    <a href="#" class="breaking-news">
+                        <p class="bntime">23 Jun 2020</p>
+                        Deadly floods and torrential rain affect South China
+                    </a>
+
+                     <a href="#" class="breaking-news">
+                        <p class="bntime">24 Jun 2020</p>
+                        Apoclaptic locust attack is commonplace in many countries
+                    </a>
+
+                     <a href="#" class="breaking-news">
+                        <p class="bntime">25 Jun 2020</p>
+                        Saharan dust plume is to cover southern states
+                    </a>
+                </marquee>
+            </div>
     </header>
     
 
