--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
             </nav> 
             <div class="breaking-news-section">
                 <span id="btext">Breaking News</span>
-                <marquee behavior="scroll" scrollamount="10" direction="left">
+                <marquee behavior="scroll" scrollamount="10" direction="left"
+                onmouseover="this.stop()" onmouseout="this.start()">
 
                     <a href="#" class="breaking-news">
                         <p class="bntime">23 Jun 2020</p>
@@ -95,6 +96,98 @@
                 </marquee>
             </div>
     </header>
+
+    <main>
+        <article id="popular-news">
+            <div id="featured">
+                <h2>Featured</h2>
+                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner">
+
+                        <div class="carousel-item active">
+                        <img src="./images/carousel1.jpg" class="d-block w-100" alt="...">
+
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Lorem ipsum dolor sit. Iste, quae.</h5>
+                                <p>June 18,2020</p>
+                            </div>
+                        </div>
+
+
+                        <div class="carousel-item">
+                        <img src="./images/carousel2.jpg" class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Lorem ipsum ectetur adipisicing elit.</h5>
+                                <p>June 19,2020</p>
+                            </div>
+                        </div>
+
+
+                        <div class="carousel-item">
+                        <img src="/images/carousel3.jpg" class="d-block w-100" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Lorem ipsum dolor sit, lit. Quasi, provident ducimus.</h5>
+                                <p>June 22,2020</p>
+                            </div>
+                        </div>
+
+
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+            </div>
+            <div id="latest">
+                <h2>Latest</h2>
+
+
+                <section class="news">
+                    <div class="news-container">
+                        <img src="./images/news1.jpg">
+                        <p class="popular-news-text">Lorem ipsum dolor icing elit.</p>
+                    </div>
+                </section>
+
+                <section class="news">
+                    <div class="news-container">
+                        <img src="./images/new3.jpg">
+                        <p class="popular-news-text">Lorem ipsum sit amet  elit. Labore di hic?</p>
+                    </div>
+                </section>
+
+
+            </div>
+            <div id="our-picks">
+                <h2>Our picks</h2>
+
+                                <section class="news">
+                    <div class="news-container">
+                        <img src="./images/new2.jpg">
+                        <p class="popular-news-text">Amet consectetur elit. Aspernatur conti varga.</p>
+                    </div>
+                </section>
+
+                <section class="news">
+                    <div class="news-container">
+                        <img src="./images/carousel3.jpg">
+                        <p class="popular-news-text">Lorem ipsum, sitsicing elit. Aspanimi corrupti.</p>
+                    </div>
+                </section>
+
+            </div>
+        </article>
+    </main>
     
 
 
