More news section

--- a/index.html
+++ b/index.html
@@ -187,6 +187,56 @@
 
             </div>
         </article>
+
+        <section class="more-news">
+            <div class="news-section">
+                <article class="world">
+                    <h2>WORLD</h2>
+                    <img src="./images/world1.jpg">
+                    <h3>Syria Crisis: Obama rejects US military intervention</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio incidunt natus aperiam eveniet qui quia culpa corporis illo numquam saepe, modi ea nobis nihil id.</p>
+                </article>
+                <article class="sport">
+                    <h2>SPORT</h2>
+                    <img src="./images/sport1.jpg">
+                    <h3>Tokyo Olympics schedule</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At soluta dicta atque aut maiores rem voluptatum enim quae explicabo harum? Tempore magnam aut similique, odit laboriosam, sequi debitis id quis optio facere porro unde iusto provident sapiente laudantium velit quam?</p>
+                </article>
+            </div>
+
+
+            <aside>
+                <h4>RECENT EVENTS</h4>
+
+                <div class="recent-news">
+                    <img src="./images/article1.jpg">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                </div>
+
+                <div class="recent-news">
+                    <img src="./images/aside2.jpg">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                </div>
+
+                <div class="recent-news">
+                    <img src="./images/aside3.jpg">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                </div>
+
+                <div class="recent-news">
+                    <img src="./images/aside4.jpg">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                </div>
+
+                <div class="recent-news">
+                    <img src="./images/aside5.jpg">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                </div>
+            </aside> 
+        </section>
+
+
+
     </main>
     
 
