Working on footer section

--- a/index.html
+++ b/index.html
@@ -238,6 +238,44 @@
 
 
     </main>
+
+    <footer>
+        <div class="social-links">
+            <section class="about">
+                <h2>About</h2>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid sint quos impedit saepe modi rerum reiciendis amet sunt error quam.</p>
+                <div class="social-icons-footer">
+                    <i class="fab fa-facebook"></i>
+                    <i class="fab fa-twitter-square"></i>
+                    <i class="fab fa-google-plus-square"></i>
+                    <i class="fab fa-instagram"></i>
+                    <i class="fas fa-rss-square"></i>
+                    <i class="fab fa-youtube-square"></i>
+                    <i class="fab fa-pinterest-square"></i>
+                    <i class="fab fa-linkedin"></i>
+                </div>
+
+            </section>
+
+            <section class="instagram">
+                <h2>Instagram</h2>
+                <img src="./images/aside2.jpg" alt="">
+                <img src="./images/aside3.jpg" alt="">
+                <img src="./images/aside4.jpg" alt="">
+                <img src="./images/aside5.jpg" alt="">
+                <img src="./images/aside2.jpg" alt="">
+                <img src="./images/aside3.jpg" alt="">
+                <img src="./images/aside4.jpg" alt="">
+                <img src="./images/aside5.jpg" alt="">
+                <img src="./images/aside2.jpg" alt="">
+
+            </section>
+
+            <section class="subscribe">
+
+            </section>
+        </div>
+    </footer>
     
 
 
