--- a/index.html
+++ b/index.html
@@ -259,22 +259,29 @@
 
             <section class="instagram">
                 <h2>Instagram</h2>
-                <img src="./images/aside2.jpg" alt="">
-                <img src="./images/aside3.jpg" alt="">
-                <img src="./images/aside4.jpg" alt="">
-                <img src="./images/aside5.jpg" alt="">
-                <img src="./images/aside2.jpg" alt="">
-                <img src="./images/aside3.jpg" alt="">
-                <img src="./images/aside4.jpg" alt="">
-                <img src="./images/aside5.jpg" alt="">
-                <img src="./images/aside2.jpg" alt="">
+                <img src="./images/aside2.jpg" >
+                <img src="./images/aside3.jpg" >
+                <img src="./images/aside4.jpg" >
+                <img src="./images/aside5.jpg" >
+                <img src="./images/aside2.jpg" >
+                <img src="./images/aside3.jpg" >
+                <img src="./images/aside4.jpg" >
+                <img src="./images/aside5.jpg" >
+                <img src="./images/aside2.jpg" >
+                <button class="footer-btn" type="button">View on instagram</button>
 
             </section>
 
             <section class="subscribe">
+                <h2>Subscribe to news today</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, sapiente eligendi fuga laborum inventore asperiores!</p>
+                <input type="email" placeholder="Email address">
+                <button class="footer-btn" type="button">Subscribe</button>
+
 
             </section>
         </div>
+        <div class="copyright">Copyright &copy; 2020 Alternative News. Desgined by AbdulMalik Sharif.</div>
     </footer>
     
 
